Fix snackbar overflow issue during animation
I'm not sure this is the best way to solve this, but it seems to
be effective.. 😅

--- a/src/global.css
+++ b/src/global.css
@@ -83,6 +83,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: var(--color-darkest-grey);
   background-color: var(--color-lightest-grey);
+
+  /* Required for the snackbar messages */
+  overflow: hidden;
 }
 
 :focus {
